# 1source-cpp

./: .gitignore  1source.cpp  1source.hpp  CMakeLists.txt  README.md  configuration.cpp  configuration.toml
include/: configuration.hpp  logger.hpp  utilities.hpp
